[RED] Adding Unit Test